--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -115,19 +115,20 @@
     <Compile Include="HttpService.cs" />
     <Compile Include="Helpers\FileSystemWatcherInfo.cs" />
     <Compile Include="Modules\ApiModule.cs" />
-    <Compile Include="Modules\PluginModule.cs" />
+    <Compile Include="Modules\AgentsModule.cs" />
     <Compile Include="Parameters\ActivityParameters.cs" />
     <Compile Include="Platforms\IPlatformProvider.cs" />
     <Compile Include="Platforms\OSX\ThumbnailProvider.cs" />
     <Compile Include="Platforms\IThumbnailProvider.cs" />
     <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
     <Compile Include="Platforms\PlatformProvider.cs" />
+    <Compile Include="Plugin\PluginCheckerFactory.cs" />
+    <Compile Include="Plugin\PluginManifestReader.cs" />
     <Compile Include="Plugin\SoftwareAgentPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameters.cs" />
     <Compile Include="Modules\ActivitiesModule.cs" />
-    <Compile Include="Modules\AgentsModule.cs" />
     <Compile Include="Helpers\FileSystemMonitor.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Options.cs" />
