Improved setup of software plugins. Implementing detection and install of browser extensions. Removed copyright notice from Chrome extension. Published chrome extension.

--- a/Artivity.Apid.Windows/Artivity.Apid.Windows.csproj
+++ b/Artivity.Apid.Windows/Artivity.Apid.Windows.csproj
@@ -93,7 +93,18 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Plugins\Chrome\Manifest.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Plugins\IllustratorCC2015.2\Manifest.xml" />
+    <Content Include="Plugins\IllustratorCC2015\Manifest.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Plugins\PhotoshopCC2015\Manifest.xml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -102,6 +113,5 @@
   <Target Name="AfterBuild">
   </Target>
     -->
-	  <Import Project="$(ProjectDir)\CopyToOutput.targets" />
-
+  <Import Project="$(ProjectDir)\CopyToOutput.targets" />
 </Project>
