--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -123,18 +123,19 @@
     <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
     <Compile Include="Platforms\PlatformProvider.cs" />
     <Compile Include="Plugin\PluginCheckerFactory.cs" />
+    <Compile Include="Plugin\PluginManifestPluginFile.cs" />
     <Compile Include="Plugin\PluginManifestReader.cs" />
+    <Compile Include="Plugin\PluginManifestRegistryItem.cs" />
+    <Compile Include="Plugin\PluginManifestRegistryKey.cs" />
     <Compile Include="Plugin\SoftwareAgentPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameters.cs" />
-    <Compile Include="Modules\ActivitiesModule.cs" />
     <Compile Include="Helpers\FileSystemMonitor.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Parameters\UriParameters.cs" />
     <Compile Include="Modules\UriModule.cs" />
-    <Compile Include="Modules\MonitorModule.cs" />
     <Compile Include="Helpers\FileInfoCache.cs" />
     <Compile Include="Platforms\OSX\CoreFoundation.cs" />
     <Compile Include="Plugin\PluginChecker.cs" />
