--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -76,11 +76,34 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="app\js\ui-bootstrap-tpls-1.3.3.min.js" />
-    <EmbeddedResource Include="app\js\ui-grid.min.js" />
-    <EmbeddedResource Include="app\js\bootstrap-switch.js" />
-    <EmbeddedResource Include="app\js\bootstrap-switch.min.js" />
-    <EmbeddedResource Include="app\js\color-thief.js" />
+    <EmbeddedResource Include="app\js\lib\angular-input-modified.js" />
+    <EmbeddedResource Include="app\js\lib\angular-route.min.js" />
+    <EmbeddedResource Include="app\js\lib\angular-ui.min.js" />
+    <EmbeddedResource Include="app\js\lib\angular.min.js" />
+    <EmbeddedResource Include="app\js\lib\base64.js" />
+    <EmbeddedResource Include="app\js\lib\base64.min.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap-colorpicker.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap-colorpicker.min.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap-switch.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap-switch.min.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap.js" />
+    <EmbeddedResource Include="app\js\lib\bootstrap.min.js" />
+    <EmbeddedResource Include="app\js\lib\color-thief.js" />
+    <EmbeddedResource Include="app\js\lib\color-thief.min.js" />
+    <EmbeddedResource Include="app\js\lib\d3-gantt.js" />
+    <EmbeddedResource Include="app\js\lib\d3.min.js" />
+    <EmbeddedResource Include="app\js\lib\jquery-2.2.2.min.js" />
+    <EmbeddedResource Include="app\js\lib\light-grid.js" />
+    <EmbeddedResource Include="app\js\lib\light-grid.min.js" />
+    <EmbeddedResource Include="app\js\lib\moment.min.js" />
+    <EmbeddedResource Include="app\js\lib\npm.js" />
+    <EmbeddedResource Include="app\js\lib\quantize.js" />
+    <EmbeddedResource Include="app\js\lib\ui-bootstrap-tpls-1.3.3.min.js" />
+    <EmbeddedResource Include="app\js\lib\ui-grid.min.js" />
+    <EmbeddedResource Include="app\js\app.classes.js" />
+    <EmbeddedResource Include="app\js\app.conf.debug.js" />
+    <EmbeddedResource Include="app\js\app.conf.js" />
+    <EmbeddedResource Include="app\js\app.controllers.js" />
     <EmbeddedResource Include="app\partials\query.html" />
     <EmbeddedResource Include="app\css\roboto.css" />
     <EmbeddedResource Include="app\css\bootstrap-switch.css" />
@@ -91,16 +114,6 @@
     <Content Include="app\img\orcid_64x64.png" />
     <EmbeddedResource Include="app\partials\file-view.html" />
     <EmbeddedResource Include="app\partials\error-no-apid-connection.html" />
-    <EmbeddedResource Include="app\js\quantize.js" />
-    <EmbeddedResource Include="app\js\color-thief.min.js" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
-    <EmbeddedResource Include="app\js\conf_release.js">
-      <LogicalName>Artivity.Apid.Modules.Journal.app.js.conf.js</LogicalName>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-    <EmbeddedResource Include="app\js\conf.js" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="app\css\bootstrap-colorpicker.css" />
@@ -138,25 +151,7 @@
     <EmbeddedResource Include="app\img\construction.svg" />
     <EmbeddedResource Include="app\img\placeholder-img.png" />
     <EmbeddedResource Include="app\index.html" />
-    <EmbeddedResource Include="app\js\angular-input-modified.js" />
-    <EmbeddedResource Include="app\js\angular-route.min.js" />
-    <EmbeddedResource Include="app\js\angular-ui.min.js" />
-    <EmbeddedResource Include="app\js\angular.min.js" />
     <EmbeddedResource Include="app\js\app.js" />
-    <EmbeddedResource Include="app\js\base64.js" />
-    <EmbeddedResource Include="app\js\base64.min.js" />
-    <EmbeddedResource Include="app\js\bootstrap-colorpicker.js" />
-    <EmbeddedResource Include="app\js\bootstrap-colorpicker.min.js" />
-    <EmbeddedResource Include="app\js\bootstrap.js" />
-    <EmbeddedResource Include="app\js\bootstrap.min.js" />
-    <EmbeddedResource Include="app\js\controllers.js" />
-    <EmbeddedResource Include="app\js\d3-gantt.js" />
-    <EmbeddedResource Include="app\js\d3.min.js" />
-    <EmbeddedResource Include="app\js\jquery-2.2.2.min.js" />
-    <EmbeddedResource Include="app\js\light-grid.js" />
-    <EmbeddedResource Include="app\js\light-grid.min.js" />
-    <EmbeddedResource Include="app\js\moment.min.js" />
-    <EmbeddedResource Include="app\js\npm.js" />
     <EmbeddedResource Include="app\partials\file-list.html" />
     <EmbeddedResource Include="app\partials\settings.html" />
   </ItemGroup>
