--- a/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
+++ b/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Folder Include="Resources\" />
     <Folder Include="Platform\" />
+    <Folder Include="Plugins\Chrome\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -115,6 +116,15 @@
     <BundleResource Include="Plugins\IllustratorCC2015.2\Sample.ai" />
     <BundleResource Include="Plugins\PhotoshopCC2015\Manifest.xml" />
     <BundleResource Include="Plugins\PhotoshopCC2015\Sample.psd" />
+    <BundleResource Include="Plugins\IllustratorCC2015\Artivity64_2015.aip" />
+    <BundleResource Include="Plugins\IllustratorCC2015.2\Artivity64_2015.2.aip" />
+    <BundleResource Include="Plugins\PhotoshopCC2015\Artivity64.8li" />
+    <BundleResource Include="Plugins\Chrome\lfpdclalfidmgoedibkdihkbiclfoebh.json" />
+    <BundleResource Include="Plugins\Chrome\Manifest.xml">
+      <SubType>Designer</SubType>
+    </BundleResource>
+    <BundleResource Include="Plugins\Chrome\Icon.png" />
+    <BundleResource Include="Plugins\Chrome\Sample.html" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="$(ProjectDir)\CopyToOutput.targets" />
