--- a/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
+++ b/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
@@ -9,7 +9,7 @@
     <RootNamespace>Artivity.Apid.Mac</RootNamespace>
     <AssemblyName>artivity-apid</AssemblyName>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
-    <ReleaseVersion>1.5</ReleaseVersion>
+    <ReleaseVersion>1.6</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -88,6 +88,23 @@
     <None Include="TinyVirtuoso\virtuoso\doc\LICENSE" />
     <None Include="TinyVirtuoso\virtuoso\doc\NEWS" />
     <None Include="TinyVirtuoso\virtuoso\doc\README" />
+    <None Include="Plugins\Chrome\Icon.png" />
+    <None Include="Plugins\Chrome\lfpdclalfidmgoedibkdihkbiclfoebh.json" />
+    <None Include="Plugins\Chrome\Manifest.xml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Plugins\Chrome\Sample.html" />
+    <None Include="Plugins\IllustratorCC2015\Artivity64_2015.aip" />
+    <None Include="Plugins\IllustratorCC2015\Icon.png" />
+    <None Include="Plugins\IllustratorCC2015\Manifest.xml" />
+    <None Include="Plugins\IllustratorCC2015\Sample.ai" />
+    <None Include="Plugins\IllustratorCC2015.2\Artivity64_2015.2.aip" />
+    <None Include="Plugins\IllustratorCC2015.2\Icon.png" />
+    <None Include="Plugins\IllustratorCC2015.2\Manifest.xml" />
+    <None Include="Plugins\PhotoshopCC2015\Artivity64.8li" />
+    <None Include="Plugins\PhotoshopCC2015\Icon.png" />
+    <None Include="Plugins\PhotoshopCC2015\Manifest.xml" />
+    <None Include="Plugins\PhotoshopCC2015\Sample.psd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Artivity.Apid\Artivity.Apid.csproj">
@@ -107,25 +124,9 @@
     <BundleResource Include="TinyVirtuoso\database\virtuoso.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </BundleResource>
-    <BundleResource Include="Plugins\IllustratorCC2015\Icon.png" />
-    <BundleResource Include="Plugins\IllustratorCC2015.2\Icon.png" />
-    <BundleResource Include="Plugins\PhotoshopCC2015\Icon.png" />
-    <BundleResource Include="Plugins\IllustratorCC2015\Manifest.xml" />
-    <BundleResource Include="Plugins\IllustratorCC2015\Sample.ai" />
-    <BundleResource Include="Plugins\IllustratorCC2015.2\Manifest.xml" />
     <BundleResource Include="Plugins\IllustratorCC2015.2\Sample.ai" />
-    <BundleResource Include="Plugins\PhotoshopCC2015\Manifest.xml" />
-    <BundleResource Include="Plugins\PhotoshopCC2015\Sample.psd" />
-    <BundleResource Include="Plugins\IllustratorCC2015\Artivity64_2015.aip" />
-    <BundleResource Include="Plugins\PhotoshopCC2015\Artivity64.8li" />
-    <BundleResource Include="Plugins\Chrome\lfpdclalfidmgoedibkdihkbiclfoebh.json" />
-    <BundleResource Include="Plugins\Chrome\Manifest.xml">
-      <SubType>Designer</SubType>
-    </BundleResource>
-    <BundleResource Include="Plugins\Chrome\Icon.png" />
-    <BundleResource Include="Plugins\Chrome\Sample.html" />
-    <BundleResource Include="Plugins\IllustratorCC2015.2\Artivity64_2015.2.aip" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
-  <Import Project="$(ProjectDir)\CopyToOutput.targets" />
+  <Import Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " Project="$(ProjectDir)\Build\CopyToOutput.targets" />
+  <Import Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU'" Project="$(ProjectDir)\Build\DownloadPlugins.targets" />
 </Project>
