--- a/Artivity.Apid/app.config
+++ b/Artivity.Apid/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="trinity" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
+    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
     <section name="oauth2" type="OAuth2.Configuration.OAuth2ConfigurationSection, OAuth2, Version=0.8.*, Culture=neutral" />
   </configSections>
   <connectionStrings>
