Fixed some error handling in journal.

--- a/Artivity.Journal.Mac/Artivity.Journal.Mac.csproj
+++ b/Artivity.Journal.Mac/Artivity.Journal.Mac.csproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="packages.config" />
+    <None Include="error\error-no-apid-connection.html" />
+    <None Include="error\wait-for-connection.html" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
