Implemented support for dragging apps into the browser window to register their application bundle paths with the plugin checker.

--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Helpers\JsonNetBodyDeserializer.cs" />
     <Compile Include="Helpers\JsonNetSerializer.cs" />
     <Compile Include="Helpers\NancyHelpers.cs" />
+    <Compile Include="Modules\ActivitiesModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
