--- a/Artivity.Apid.Mac/Info.plist
+++ b/Artivity.Apid.Mac/Info.plist
@@ -9,12 +9,14 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.semiodesk.artivity-apid</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.0</string>
+	<string>1</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.10</string>
 	<key>LSUIElement</key>
 	<string>1</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
 </dict>
 </plist>
