Set output path.

--- a/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
+++ b/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
@@ -15,7 +15,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\build\Debug OSX</OutputPath>
+    <OutputPath>..\build\Debug</OutputPath>
     <DefineConstants>__UNIFIED__;DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release OSX|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>..\build\Release OSX</OutputPath>
+    <OutputPath>..\build\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
