--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>Artivity.Api</RootNamespace>
     <ReleaseVersion>1.6</ReleaseVersion>
     <AssemblyName>Artivity.Apid</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>false</Optimize>
@@ -103,6 +104,8 @@
       <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.147-rc\lib\Net40\VDS.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\IOAuth2AccountProvider.cs" />
@@ -160,6 +163,8 @@
     <Compile Include="Helpers\JsonNetSerializer.cs" />
     <Compile Include="Helpers\NancyHelpers.cs" />
     <Compile Include="Modules\ActivitiesModule.cs" />
+    <Compile Include="Modules\ExportModule.cs" />
+    <Compile Include="Extensions\UriExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -284,5 +289,8 @@
       <Project>{EBEAF1EE-ACD3-4124-A8E4-314822824EC8}</Project>
       <Name>Artivity.Apid.Modules.Journal</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
