--- a/Artivity.Apid/packages.config
+++ b/Artivity.Apid/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net40" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net40" requireReinstallation="True" />
   <package id="ini-parser" version="2.2.2" targetFramework="net40" />
-  <package id="log4net" version="2.0.5" targetFramework="net40" />
+  <package id="log4net" version="2.0.5" targetFramework="net40" requireReinstallation="True" />
   <package id="Nancy" version="1.4.3" targetFramework="net40" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40" requireReinstallation="True" />
   <package id="OAuth2" version="0.8.36" targetFramework="net40" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net40" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40" requireReinstallation="True" />
   <package id="Semiodesk.Trinity.Core" version="0.9.147-rc" targetFramework="net40" />
   <package id="TinyVirtuoso" version="0.3.25" targetFramework="net40" />
   <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net40" />
