--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -126,12 +126,12 @@
     <Compile Include="Platforms\IThumbnailProvider.cs" />
     <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
     <Compile Include="Platforms\PlatformProvider.cs" />
-    <Compile Include="Plugin\PluginCheckerFactory.cs" />
-    <Compile Include="Plugin\PluginManifestPluginFile.cs" />
-    <Compile Include="Plugin\PluginManifestReader.cs" />
-    <Compile Include="Plugin\PluginManifestRegistryItem.cs" />
-    <Compile Include="Plugin\PluginManifestRegistryKey.cs" />
-    <Compile Include="Plugin\SoftwareAgentPlugin.cs" />
+    <Compile Include="Plugins\PluginCheckerFactory.cs" />
+    <Compile Include="Plugins\PluginManifestPluginFile.cs" />
+    <Compile Include="Plugins\PluginManifestReader.cs" />
+    <Compile Include="Plugins\PluginManifestRegistryItem.cs" />
+    <Compile Include="Plugins\PluginManifestRegistryKey.cs" />
+    <Compile Include="Plugins\SoftwareAgentPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameters.cs" />
@@ -142,13 +142,13 @@
     <Compile Include="Modules\UriModule.cs" />
     <Compile Include="Helpers\FileInfoCache.cs" />
     <Compile Include="Platforms\OSX\CoreFoundation.cs" />
-    <Compile Include="Plugin\PluginChecker.cs" />
-    <Compile Include="Plugin\PluginManifest.cs" />
+    <Compile Include="Plugins\PluginChecker.cs" />
+    <Compile Include="Plugins\PluginManifest.cs" />
     <Compile Include="Platforms\Win\InstallationWatchdog.cs" />
     <Compile Include="Platforms\Win\InstalledPrograms.cs" />
     <Compile Include="Platforms\Win\RegistryEntry.cs" />
     <Compile Include="Platforms\Win\RegistryMonitor.cs" />
-    <Compile Include="Plugin\IInstallationWatchdog.cs" />
+    <Compile Include="Plugins\IInstallationWatchdog.cs" />
     <Compile Include="Platforms\OSX\Carbon.cs" />
     <Compile Include="Platforms\OSX\InstalledPrograms.cs" />
     <Compile Include="Platforms\OSX\OsxPluginChecker.cs" />
@@ -191,7 +191,7 @@
     <None Include="TinyVirtuoso\virtuoso\doc\LICENSE" />
     <None Include="TinyVirtuoso\virtuoso\doc\NEWS" />
     <None Include="TinyVirtuoso\virtuoso\doc\README" />
-    <None Include="Plugin\Manifest.xsd">
+    <None Include="Plugins\Manifest.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
