Increased timeout before kill signal is sent in launchagent.

--- a/Artivity.Journal.Mac/com.semiodesk.artivity.plist
+++ b/Artivity.Journal.Mac/com.semiodesk.artivity.plist
@@ -12,5 +12,7 @@
 	</array>
 	<key>WorkingDirectory</key>
 	<string>{0}/Applications/artivity-apid.app/Contents/Resources</string>
+	<key>ExitTimeOut</key>
+	<integer>60</integer>
 </dict>
 </plist>
