--- a/libartivity/CMakeLists.txt
+++ b/libartivity/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
-find_package(Boost 1.60.0 COMPONENTS filesystem thread chrono) 
+find_package(Boost 1.60.0 COMPONENTS filesystem thread chrono random) 
 find_package(curl)
 
 if(Boost_FOUND)
