Added new TinyVirtuoso Prepared libartivity for SaveAs

--- a/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
+++ b/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
@@ -55,9 +55,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
-    <Reference Include="TinyVirtuoso">
-      <HintPath>..\packages\TinyVirtuoso.0.3.25\lib\Net35\TinyVirtuoso.dll</HintPath>
-    </Reference>
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
     </Reference>
@@ -65,6 +62,9 @@
     <Reference Include="Xamarin.Mac" />
     <Reference Include="INIFileParser">
       <HintPath>..\packages\ini-parser.2.3.0\lib\net20\INIFileParser.dll</HintPath>
+    </Reference>
+    <Reference Include="TinyVirtuoso">
+      <HintPath>..\packages\TinyVirtuoso.0.3.29\lib\Net35\TinyVirtuoso.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +106,7 @@
     <None Include="Plugins\PhotoshopCC2015\Manifest.xml" />
     <None Include="Plugins\PhotoshopCC2015\Sample.psd" />
     <None Include="app.config" />
+    <None Include="TinyVirtuoso\database\virtuoso.ini" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Artivity.Apid\Artivity.Apid.csproj">
@@ -120,9 +121,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </BundleResource>
     <BundleResource Include="TinyVirtuoso\virtuoso\osx\isql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </BundleResource>
-    <BundleResource Include="TinyVirtuoso\database\virtuoso.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </BundleResource>
     <BundleResource Include="Plugins\IllustratorCC2015.2\Sample.ai" />
