--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -76,9 +76,6 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Configuration" />
-    <Reference Include="TinyVirtuoso, Version=0.3.25.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\TinyVirtuoso.0.3.25\lib\Net35\TinyVirtuoso.dll</HintPath>
-    </Reference>
     <Reference Include="System.Management" />
     <Reference Include="Mono.Posix" />
     <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, PublicKeyToken=null">
@@ -105,6 +102,9 @@
     </Reference>
     <Reference Include="INIFileParser">
       <HintPath>..\packages\ini-parser.2.3.0\lib\net20\INIFileParser.dll</HintPath>
+    </Reference>
+    <Reference Include="TinyVirtuoso">
+      <HintPath>..\packages\TinyVirtuoso.0.3.29\lib\Net35\TinyVirtuoso.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -181,9 +181,6 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="TinyVirtuoso\database\virtuoso.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="TinyVirtuoso\virtuoso\doc\AUTHORS" />
     <None Include="TinyVirtuoso\virtuoso\doc\COPYING" />
     <None Include="TinyVirtuoso\virtuoso\doc\CREDITS" />
@@ -194,6 +191,7 @@
     <None Include="Plugins\Manifest.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="TinyVirtuoso\database\virtuoso.ini" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\user.jpg" />
