Bugfix: Merge error in app.controllers.js SaveAs event working in Illustrator.

--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -111,6 +111,7 @@
     <EmbeddedResource Include="app\js\app.overlay.js" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="app\js\lib\d3-timeline.js" />
     <EmbeddedResource Include="app\js\app.translation.js" />
     <EmbeddedResource Include="app\js\lib\d3-gantt.js" />
     <EmbeddedResource Include="app\js\lib\quantize.js" />
