--- a/Artivity.Apid.Modules.Journal/app/bower.json
+++ b/Artivity.Apid.Modules.Journal/app/bower.json
@@ -25,6 +25,7 @@
     "bootstrap-switch": "~3.3.2",
     "light-grid": "~0.3.1",
     "moment": "2.14.1",
+	"moment-duration-format": "1.3.0",
     "angular-input-modified": "^2.3.3",
     "base64": "^1.0.0",
     "d3": "^4.1.1",
