--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -123,7 +123,8 @@
     <Compile Include="Helpers\FileSystemWatcherInfo.cs" />
     <Compile Include="Modules\ApiModule.cs" />
     <Compile Include="Modules\AgentsModule.cs" />
-    <Compile Include="Parameters\ActivityParameters.cs" />
+    <Compile Include="Parameters\ActivityParameter.cs" />
+    <Compile Include="Parameters\CommentParameter.cs" />
     <Compile Include="Platforms\UserConfig.cs" />
     <Compile Include="Platforms\IPlatformProvider.cs" />
     <Compile Include="Platforms\OSX\ThumbnailProvider.cs" />
@@ -138,11 +139,11 @@
     <Compile Include="Plugins\SoftwareAgentPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
-    <Compile Include="Parameters\AgentParameters.cs" />
+    <Compile Include="Parameters\AgentParameter.cs" />
     <Compile Include="Helpers\FileSystemMonitor.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="Parameters\UriParameters.cs" />
+    <Compile Include="Parameters\UriParameter.cs" />
     <Compile Include="Modules\UriModule.cs" />
     <Compile Include="Helpers\FileInfoCache.cs" />
     <Compile Include="Platforms\OSX\CoreFoundation.cs" />
