--- a/Artivity.DataModel/Artivity.DataModel.csproj
+++ b/Artivity.DataModel/Artivity.DataModel.csproj
@@ -40,6 +40,8 @@
     <Compile Include="IViewModule.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="IModelProvider.cs" />
+    <Compile Include="ObjectModel\Comment.cs" />
+    <Compile Include="ObjectModel\Communication.cs" />
     <Compile Include="ObjectModel\Entities\Folder.cs" />
     <Compile Include="ObjectModel\OnlineAccount.cs" />
     <Compile Include="ObjectModel\Person.cs" />
