--- a/Artivity.Apid.Modules.Journal/app/bower.json
+++ b/Artivity.Apid.Modules.Journal/app/bower.json
@@ -19,17 +19,19 @@
     "angular-route": "~1.5.7",
     "angular-translate": "~2.11.0",
     "angular-ui": "~0.4.0",
+    "angular-bootstrap": "^1.3.3",
+    "angular-input-modified": "^2.3.3",
     "bootstrap": "~3.3.6",
-    "color-thief": "~2.0.1",
     "bootstrap-colorpicker": "~2.3.3",
     "bootstrap-switch": "~3.3.2",
+    "color-thief": "~2.0.1",
     "light-grid": "~0.3.1",
     "moment": "2.14.1",
-	"moment-duration-format": "1.3.0",
-    "angular-input-modified": "^2.3.3",
+    "moment-duration-format": "1.3.0",
     "base64": "^1.0.0",
     "d3": "^4.1.1",
     "material-design-iconic-font": "^2.2.0",
-    "angular-bootstrap": "^1.3.3"
+    "jquery-ui": "~1.12.0",
+	"fullcalendar": "~2.9.0"
   }
 }
