Added angular-moment as embedded resource to Journal module.

--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -106,6 +106,19 @@
     <EmbeddedResource Include="app\bower_components\material-design-iconic-font\dist\fonts\Material-Design-Iconic-Font.ttf" />
     <EmbeddedResource Include="app\bower_components\material-design-iconic-font\dist\fonts\Material-Design-Iconic-Font.woff" />
     <EmbeddedResource Include="app\bower_components\material-design-iconic-font\dist\fonts\Material-Design-Iconic-Font.woff2" />
+    <None Include="app\bower_components\angular-moment\.bower.json" />
+    <None Include="app\bower_components\angular-moment\.editorconfig" />
+    <None Include="app\bower_components\angular-moment\.jshintrc" />
+    <None Include="app\bower_components\angular-moment\.npmignore" />
+    <None Include="app\bower_components\angular-moment\.travis.yml" />
+    <None Include="app\bower_components\angular-moment\angular-moment.min.js.map" />
+    <None Include="app\bower_components\angular-moment\angular-moment.nuspec" />
+    <None Include="app\bower_components\angular-moment\bower.json" />
+    <None Include="app\bower_components\angular-moment\CHANGELOG.md" />
+    <None Include="app\bower_components\angular-moment\CONTRIBUTING.md" />
+    <None Include="app\bower_components\angular-moment\LICENSE" />
+    <None Include="app\bower_components\angular-moment\package.json" />
+    <None Include="app\bower_components\angular-moment\README.md" />
     <None Include="app\bower_components\moment-duration-format\.bower.json" />
     <None Include="app\bower_components\moment-duration-format\bower.json" />
     <None Include="app\bower_components\moment-duration-format\LICENSE" />
@@ -164,6 +177,12 @@
     <EmbeddedResource Include="app\bower_components\jquery-ui\jquery-ui.js" />
     <EmbeddedResource Include="app\bower_components\jquery-ui\jquery-ui.min.js" />
     <EmbeddedResource Include="app\bower_components\jquery-ui\ui\widgets\draggable.js" />
+    <Content Include="app\bower_components\angular-moment\.gitignore" />
+    <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.js" />
+    <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.min.js" />
+    <Content Include="app\bower_components\angular-moment\Gruntfile.js" />
+    <Content Include="app\bower_components\angular-moment\karma.conf.js" />
+    <Content Include="app\bower_components\angular-moment\tests.js" />
     <Content Include="app\img\heart-broken.svg" />
     <Content Include="app\img\heart.svg" />
     <Content Include="app\img\orcid_64x64.png" />
